[fix] Fix concurrent list

--- a/programming1/Makefile
+++ b/programming1/Makefile
@@ -4,19 +4,24 @@ LDFLAGS = -lpthread -lm
 RM 		= rm -rf
 TARGET 	= phase1
 
-.PHONY: clean distclean
+.PHONY: run clean distclean
 
 all: phase1
 
-phase1: singleLinkedList.o main.c
+phase1: singleLinkedList.o unboundedLockFreeQueue.o main.c
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 singleLinkedList.o: singleLinkedList.c
 	$(CC) $(CFLAGS) -c $< $(LDFLAGS)
 
+unboundedLockFreeQueue.o: unboundedLockFreeQueue.c
+	$(CC) $(CFLAGS) -c $< $(LDFLAGS)
+
+run:
+	./phase1 -n 2 > err 2>&1 > out
+
 clean:
-	$(RM) *.o
+	$(RM) *.o err out
 
 distclean:
 	$(RM) phase1
-
