[feat] Leader election

--- a/programming2/Makefile
+++ b/programming2/Makefile
@@ -2,21 +2,21 @@ MPICC = mpicc
 CFLAGS = -g
 MPIRUN = mpirun
 EXECS = warehouse
-NUM_PROCESS = 8
+NUM_PROCESS = 5
 HOSTFILE = ./testfiles/Graduates/testfile2/np20_servers4.txt
 IN_FILE = ./testfiles/Graduates/testfile2/np20_servers4.txt
 
 all: $(EXECS)
 
 warehouse: server.o main.c
-	$(MPICC) $(CFLAGS) -o $@ $^
+	$(MPICC) $(CFLAGS) -o $@ $^ -lm
 
 server.o: server.c
-	$(MPICC) $(CFLAGS) -c $< 
+	$(MPICC) $(CFLAGS) -c $< -lm
 
 run:
 	#$(MPIRUN) -np $(NUM_PROCESS) --hostfile $(HOSTFILE) $(EXECS) $(NUMSERVERS)
 	$(MPIRUN) -np $(NUM_PROCESS) ./$(EXECS) $(IN_FILE) 4 > err 2>&1 > out
 
 clean:
-	rm $(EXECS)
+	rm $(EXECS) out err
